fixed align-items on .main, fixed redirect on account creation, didnt even know it awas broke....

--- a/style/scss/styles.scss
+++ b/style/scss/styles.scss
@@ -136,7 +136,6 @@ html, body, .app {
   grid-area: main;
   display: flex;
   flex-direction: column;
-  align-items: center;
   justify-content: flex-start;
 }
 
